--- a/graphics/map/html/html.html
+++ b/graphics/map/html/html.html
@@ -1,10 +1,19 @@
 <div class='article-graphic map'>
 
-	<p class='subtitle'>Lorem ipsum Voluptate in anim non aliqua ut tempor adipisicing aliquip ullamco qui Duis commodo enim aute enim Excepteur qui in deserunt.</p>
+	<p class='subtitle'><span>Where is Chinatown?</span></p>
+	<p class='description'>Lorem ipsum Irure nisi id sit consequat dolore anim non commodo nisi incididunt in officia mollit officia adipisicing consectetur tempor voluptate.</p>
+
+	<div class='content'>
+		<div class='baselayer'>
+			<img src='img/baselayer.png' />
+		</div>
+		<div class='annotation-texts'></div>
+		<svg class='annotation-guides'></svg>
+	</div>
 
 	<div class='source-and-credit'>
-		<p class='source'><span>DATA: source</span></p>
-		<p class='credit'><span>Reporter / Globe Staff</span></p>
+		<p class='source'><span>SOURCE: BRA, Chinatown Master Plan 2010</span></p>
+		<p class='credit'><span>Gabriel Florit, Maria Sacchetti / Globe Staff</span></p>
 	</div>
 
 </div>
