--- a/graphics/map/html/html.html
+++ b/graphics/map/html/html.html
@@ -1,18 +1,20 @@
 <div class='article-graphic map'>
 
 	<p class='subtitle'><span>Where is Chinatown?</span></p>
-	<p class='description'>Lorem ipsum Irure nisi id sit consequat dolore anim non commodo nisi incididunt in officia mollit officia adipisicing consectetur tempor voluptate.</p>
+	<p class='description'>The BRA's map of Chinatown is much narrower than that of the community, which claims the neighborhood includes areas farther north and south. The BRA has approved major redevelopment projects outside its official Chinatown borders.</p>
 
 	<div class='content'>
 		<div class='baselayer'>
 			<img src='img/baselayer.png' />
 		</div>
-		<div class='annotation-texts'></div>
+		<div class='map-labels'></div>
+		<svg class='map'></svg>
 		<svg class='annotation-guides'></svg>
+		<div class='annotation-texts'></div>
 	</div>
 
 	<div class='source-and-credit'>
-		<p class='source'><span>SOURCE: BRA, Chinatown Master Plan 2010</span></p>
+		<p class='source'><span>SOURCES: BRA, Chinatown Master Plan 2010</span></p>
 		<p class='credit'><span>Gabriel Florit, Maria Sacchetti / Globe Staff</span></p>
 	</div>
 
