--- a/graphics/map/html/html.html
+++ b/graphics/map/html/html.html
@@ -1,21 +1,29 @@
 <div class='article-graphic map'>
 
 	<p class='subtitle'><span>Where is Chinatown?</span></p>
-	<p class='description'>The BRA's map of Chinatown is much narrower than that of the community, which claims the neighborhood includes areas farther north and south. The BRA has approved major redevelopment projects outside its official Chinatown borders.</p>
+	<p class='description'>The Boston Redevelopment Authority’s map of Chinatown is much smaller than that of the community, which says the neighborhood includes areas farther north and south. The BRA has approved major redevelopment projects outside its defined Chinatown borders.</p>
+
+	<ul class='legend'>
+		<li class='BRA'><hr />BRA’s borders</li>
+		<li class='CSCNC'><hr />Community’s borders</li>
+	</ul>
 
 	<div class='content'>
 		<div class='baselayer'>
-			<img src='img/baselayer.png' />
+			<img src='http://cache.boston.com/multimedia/graphics/projectFiles/2015/chinatown/baselayer.jpg' />
 		</div>
 		<div class='map-labels'></div>
 		<svg class='map'></svg>
 		<svg class='annotation-guides'></svg>
 		<div class='annotation-texts'></div>
+		<div class='map-distance-legend'>
+			<span class='number'>1000 ft.</span>
+		</div>
 	</div>
 
 	<div class='source-and-credit'>
 		<p class='source'><span>SOURCES: BRA, Chinatown Master Plan 2010</span></p>
-		<p class='credit'><span>Gabriel Florit, Maria Sacchetti / Globe Staff</span></p>
+		<p class='credit'><span>Gabriel Florit, Bennie DiNardo, Maria Sacchetti / Globe Staff</span></p>
 	</div>
 
 </div>
